Fix ObjectHolder for java 17